--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,8 @@
 body {
+  font-family: Arial, sans-serif;
   margin: 0;
-  font-family: 'Georgia', serif;
+  padding: 0;
+  background-color: #f5f5f5;
 }
 
 .header {
@@ -45,12 +47,13 @@ body {
 .pehla{
   border-radius: 2%;
   width: 100%;
+  margin-bottom: 100px;
 }
 
 .baki{
   display: grid;
-  height: 100vh;
   grid-template-columns: repeat(3,1fr);
+  height: 100vh;
 }
 
 .nine{
@@ -60,30 +63,128 @@ body {
 
 .final_text{
   text-align: right;
-  margin-right: 100px;
+  font-size: 25px;
+  margin-right: 150px;
 }
 
-
-.contact_info{
+.gallery-container {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 20px;
   display: grid;
-  grid-template-columns: repeat(3,1fr);
-  margin: 20px;
-  /* gap: 0px; */
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 20px;
+  padding-left: 0;
+  padding-right: 0;
 }
 
-.footer-header{
-  margin-left: 200px;
+.gallery-item {
+  background-color: #ffffff;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+  text-align:left;
+}
+
+.gallery-item img {
+  width: 100%;
+  height: auto;
+  display: block;
+}
+
+.gallery-item h3 {
+  margin: 15px 0 5px;
+  font-size: 1.2em;
+  color: #333333;
+}
+
+.gallery-item p {
+  margin: 0 0 15px;
+  font-size: 0.9em;
+  color: #666666;
+}
+
+.container {
+  max-width: 800px;
+  margin: 50px auto;
+  padding: 20px;
+  background-color: #ffffff;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.heading {
+  font-size: 2em;
   font-weight: bold;
-  font-size: 30px;
+  margin-bottom: 20px;
+  text-align: left;
 }
 
-.footer-items{
-  margin: auto;
+.info-table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 20px;
 }
 
-.footer-info{
-  display: flex; 
-  flex-direction: row;
-  justify-content: start;
+.info-table th,
+.info-table td {
+  padding: 10px;
+  text-align: left;
+  vertical-align: top;
 }
 
+.info-table th {
+  font-size: 1.1em;
+  color: #333;
+}
+
+.info-table td {
+  font-size: 1em;
+  color: #666;
+}
+
+.info-table td:nth-child(2) {
+  text-align: left;
+}
+
+.info-table td:nth-child(3) {
+  text-align: left;
+}
+
+.info-table th:nth-child(2),
+.info-table th:nth-child(3) {
+  text-align: left;
+}
+
+
+
+.footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 20px;
+  background-color: #ffffff;
+  border-top: 1px solid #e0e0e0;
+}
+
+.footer-text {
+  color: #777777;
+  font-size: 0.9rem;
+}
+
+.footer-button {
+  background-color: transparent;
+  color: #555555;
+  border: 1px solid #d3d3d3;
+  padding: 5px 15px;
+  border-radius: 20px;
+  font-size: 0.9rem;
+  cursor: pointer;
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.footer-button:hover {
+  background-color: #555555;
+  color: #ffffff;
+}
