--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@ body {
   font-size: 1.5rem;
   font-weight: bold;
   color: #23281B;    
-  font-family: 'Source Serif 4', serif;;      
+  font-family: 'Source Serif 4', serif;  
   /* 16px - rem */
 }
 
@@ -32,6 +32,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Roboto', sans-serif;
+  color: #23281B;
 }
 
 .navigation li {
@@ -43,6 +44,7 @@ body {
   text-align: center;
   font-size: 50px;
   font-family: 'Domine', serif;
+  color: #23281B;
 }
 
 .firstimg{
@@ -60,6 +62,7 @@ body {
 .final_text{
   width: 95%;
   font-size: 160%;
+  color: rgba(35, 40, 27, 1);
 }
 
 .final_2{
@@ -96,13 +99,13 @@ body {
 .gallery-item h3 {
   margin: 15px 0 5px;
   font-size: 1.2em;
-  color: #333333;
+  color: #23281B;
 }
 
 .gallery-item p {
   margin: 0 0 15px;
   font-size: 0.9em;
-  color: #666666;
+  color: rgba(38, 46, 20, 0.62);
 }
 
 .container {
@@ -121,6 +124,7 @@ body {
   margin-bottom: 20px;
   text-align: left;
   font-family: 'Roboto', sans-serif;
+  color: rgba(35, 40, 27, 1);
 }
 
 .info-table {
@@ -139,12 +143,12 @@ body {
 
 .info-table th {
   font-size: 1.1em;
-  color: #333;
+  color: rgba(35, 40, 27, 1);
 }
 
 .info-table td {
   font-size: 1em;
-  color: #666;
+  color: rgba(38, 46, 20, 0.62);
 }
 
 .info-table td:nth-child(2) {
@@ -172,15 +176,15 @@ body {
 }
 
 .footer-text {
-  color: #777777;
+  color: rgba(38, 46, 20, 0.62);
   font-size: 0.9rem;
   font-family: 'Roboto', sans-serif;
 }
 
 .footer-button {
   background-color: transparent;
-  color: #555555;
-  border: 1px solid #d3d3d3;
+  color: rgba(35, 40, 27, 1);
+  border: 1px solid rgba(98, 110, 73, 0.2);
   padding: 5px 15px;
   border-radius: 20px;
   font-size: 0.9rem;
